powr-2718-b Adjust search form spacing and prevent duplicate form at /search/*, /404/*

--- a/web/themes/custom/cloudy/src/components/_header.scss
+++ b/web/themes/custom/cloudy/src/components/_header.scss
@@ -173,10 +173,12 @@
     align-items: stretch;
     background: $cloudy-color-neutral-0;
     border-radius: $border-radius-sm;
+    margin: $cloudy-space-0;
     .form-item {
       display: flex;
       flex-grow: 1;
-      margin: $cloudy-space-0;
+      align-items: center;
+      margin: 0;
     }
   }
   &__input[type="search"] {
@@ -217,6 +219,11 @@
     .cloudy-search-form__input {
       border-radius: $border-radius-sm;
     }
+    .cloudy-btn--icon[type="submit"] {
+      &:hover {
+        background-color: transparent !important;
+      }
+    }
   }
   // Content region - /front, /search, /search/*, /404
   &--large {
@@ -227,22 +234,20 @@
       height: 68px;
       border-radius: $border-radius-sm $border-radius-sm $cloudy-space-0
         $cloudy-space-0;
-    }
-    .cloudy-search-form__input {
-      padding: $cloudy-space-2 $cloudy-space-4;
-      font-size: ($cloudy-lead-md-font-size / $cloudy-type-base-font-size) + rem;
-      border-top: $search-large-border-style;
-      border-left: $search-large-border-style;
-      border-radius: $border-radius-sm $cloudy-space-0 $cloudy-space-0;
-    }
-    .cloudy-btn--icon[type="submit"] {
+      margin: $cloudy-space-0;
       border-top: $search-large-border-style;
       border-right: $search-large-border-style;
+      border-left: $search-large-border-style;
+    }
+    .cloudy-search-form__input {
+      padding: $cloudy-space-0 $cloudy-space-4;
+      font-size: ($cloudy-lead-md-font-size / $cloudy-type-base-font-size) + rem;
+      border-radius: $border-radius-sm $cloudy-space-0 $cloudy-space-0;
+      height: 100%;
+    }
+    .cloudy-btn--icon[type="submit"] {
       border-radius: $cloudy-space-0 $border-radius-sm $cloudy-space-0
         $cloudy-space-0;
-      &:hover {
-        background-color: $cloudy-color-neutral-100;
-      }
     }
   }
 }
