--- a/web/themes/custom/cloudy/src/components/_search.scss
+++ b/web/themes/custom/cloudy/src/components/_search.scss
@@ -10,14 +10,8 @@
   }
 }
 
-h1.homepage-title {
-  margin: 1rem 0;
-  color: $cloudy-color-neutral-0;
-}
-
 .popular {
   height: 100%;
-  padding: $cloudy-space-6 0 0 0;
   color: $cloudy-color-neutral-0;
 }
 
